--- a/public/css/informasi.css
+++ b/public/css/informasi.css
@@ -5,6 +5,13 @@ body {
   position: relative;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 body::before {
   content: "";
   position: fixed;
